# etf

./: .gitignore  deps.txt  etf_info.json  etf_info_all.json  etf_info_favourites.json  etf_info_global.json  etf_info_sectors.json  etf_info_usa.json  hello.py  main.py  pyproject.toml
